--- a/gaa24test/platformio.ini
+++ b/gaa24test/platformio.ini
@@ -16,5 +16,6 @@ board_build.core = earlephilhower
 lib_deps = 
 	adafruit/Adafruit LSM6DS@^4.7.0
 	adafruit/Adafruit LPS2X@^2.0.4
+	thomasfredericks/Bounce2@^2.71
 board_build.filesystem_size = 0.5m
-monitor_speed=115200
+monitor_speed = 115200
