Got picoprobe working
can now do actual debugging, using uart1 to communicate with picoprobe now

--- a/mower6lite/platformio.ini
+++ b/mower6lite/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	adafruit/Adafruit LSM6DS@^4.7.0
 	adafruit/Adafruit LPS2X@^2.0.4
 	thomasfredericks/Bounce2@^2.71
+upload_protocol=cmsis-dap
+debug_tool = cmsis-dap
