BUNCH OF BUG FIXES + COMPAT FIX also all libraries should be included now

--- a/mower6/platformio.ini
+++ b/mower6/platformio.ini
@@ -14,6 +14,10 @@ board = pico
 framework = arduino
 board_build.core = earlephilhower
 lib_deps = 
-	adafruit/Adafruit LSM6DS@^4.7.0
-	adafruit/Adafruit LPS2X@^2.0.4
 	thomasfredericks/Bounce2@^2.71
+	arduino-libraries/SD@^1.2.4
+	arduino-libraries/Servo@^1.2.1
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	adafruit/Adafruit LPS2X@^2.0.6
+	adafruit/Adafruit LSM6DS@^4.7.0
+
