--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "xlocale": "cpp"
-    }
+        "xlocale": "cpp",
+        "cmath": "cpp"
+    },
+    "cmake.configureOnOpen": false
 }
