--- a/mower6/platformio.ini
+++ b/mower6/platformio.ini
@@ -18,7 +18,5 @@ lib_deps =
 	adafruit/Adafruit LPS2X@^2.0.4
 	thomasfredericks/Bounce2@^2.71
 	arduino-libraries/SD@^1.2.4
-	
 	adafruit/Adafruit Unified Sensor@^1.1.14
-
-
+	adafruit/Adafruit MPU6050@^2.2.6
