--- a/mower6/platformio.ini
+++ b/mower6/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	arduino-libraries/SD@^1.2.4
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	adafruit/Adafruit MPU6050@^2.2.6
+	adafruit/Adafruit BMP3XX Library@^2.1.4
